[gd_scene load_steps=4 format=3 uid="uid://c6oj2hxth7biw"]

[ext_resource type="Script" uid="uid://cm2srlwefcj41" path="res://scripts/ui/intro.gd" id="1_vop3j"]
[ext_resource type="Texture2D" uid="uid://story_img1" path="res://assets/sprites/story/img1.jpg" id="2_img1"]
[ext_resource type="AudioStream" uid="uid://intro_music" path="res://assets/audio/intro_twosides.wav" id="3_music"]

[node name="Control" type="Control" unique_id=61328741]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vop3j")

[node name="ColorRect" type="ColorRect" parent="." unique_id=169617169]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="." unique_id=2097466371]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_img1")
expand_mode = 1
stretch_mode = 5

[node name="TextPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -130.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = ""

[node name="SkipHint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "ENTER: Continuar | ESC: Saltar"
horizontal_alignment = 2

[node name="SfxIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_music")

[node name="FadeRect" type="ColorRect" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
volume_db = -6.0
